# ChatMux

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-artifacts.yml  deploy-site.yml
apps/site/: README.md  index.html  package.json  vite.config.ts
apps/site/public/: robots.txt  sitemap.xml
apps/site/src/: App.tsx  Hero.tsx  Sections.tsx  ctx.ts  i18n.ts  icons.tsx  mobileShowcaseFocus.ts  seo.ts  styles.css
apps/web/: Dockerfile  capacitor.config.ts  index.html  package.json  vite.config.ts
apps/web/android/: .gitignore  capacitor.settings.gradle
apps/web/public/: manifest.webmanifest  service-worker.js
apps/web/scripts/: build-android-apk.sh  build-android-gateway.sh  (+6 more)
apps/web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/web/src-tauri/scripts/: build-gateway-sidecar.sh
apps/web/src-tauri/src/: main.rs
deploy/nginx/: chatmux.conf
deploy/web/: .env.example  docker-compose.yml
docs/: architecture.md  development.md  roadmap.md  usage.md  web-deployment.md
packaging/android/: Dockerfile  build-apk.sh  docker-compose.yml  package-apk.sh
packaging/macos/: Dockerfile  README.md  build-remote.sh  docker-compose.yml  package-macos.sh
packaging/windows/: Dockerfile  build-portable-exe.sh  docker-compose.yml  package-portable-exe.sh
services/gateway/: Dockerfile  Dockerfile.dev  go.mod  go.sum
(+220 files in other folders)
