[package]
name = "muxchat"
version = "0.1.0"
description = "MuxChat desktop shell"
authors = ["MuxChat"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "2"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
