[package]
name = "chatmux"
version = "0.1.0"
description = "ChatMux desktop shell"
authors = ["ChatMux"]
license = "MIT"
repository = "https://github.com/binjie09/ChatMux"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "2"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
